# nobus

./: README.md  pyproject.toml
nobus/: managed.py  randname.py  safeattr.py  typecheck.py  utils.py
tests/: test_safeattr.py
